# db-chat-bot

db-chat-bot-app/: .gitignore  IMPLEMENTATION_PLAN_KNOWLEDGE_GRAPH.md  KNOWLEDGE_GRAPH_RAG_IMPLEMENTATION.md  README.md  README_GRAPH_VISUALIZATION.md  pyproject.toml  run.py  visualize_graph.py  workflow_graph.mmd
db-chat-bot-app/docker-setup/: NEO4J_QUICKSTART.md  README.md  docker-compose.yml
db-chat-bot-app/docker-setup/scripts/: init.sql  load_data.sql
db-chat-bot-app/src/db_chatbot/: __init__.py  app.py
db-chat-bot-app/src/db_chatbot/agents/: __init__.py  workflow_agent.py
db-chat-bot-app/src/db_chatbot/config/: __init__.py  settings.py
db-chat-bot-app/src/db_chatbot/core/: __init__.py  database.py  query_classifier.py  sql_generator.py
db-chat-bot-app/src/db_chatbot/db_clients/: __init__.py  neo4j_client.py  postgres_client.py
db-chat-bot-app/src/db_chatbot/frontend/: __init__.py  app.py
db-chat-bot-app/src/db_chatbot/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py
db-chat-bot-app/src/db_chatbot/handlers/: __init__.py  annotation_handler.py  query_handler.py
db-chat-bot-app/src/db_chatbot/query_generator/: __init__.py  response_generator.py  sql_generator.py
db-chat-bot-app/src/db_chatbot/query_intent/: __init__.py  classifier.py
db-chat-bot-app/src/db_chatbot/rag/: __init__.py  knowledge_graph_rag.py  schema_rag.py
db-chat-bot-app/src/db_chatbot/utils/: __init__.py  result_processor.py  validators.py
gemma-model-fine-tuning/: readme.md
