[tool.poetry]
name = "db-chat-bot"
version = "0.1.0"
description = "A Streamlit-based chatbot that connects to PostgreSQL databases and allows natural language querying using local LLM"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
psycopg2-binary = "^2.9.9"
ollama = "^0.1.0"
sqlparse = "^0.4.4"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

